fix: bugs in rehearsal present